Fix build errors and warnings: upgrade Java source/target, fix javadoc, resolve Record ambiguity, update deprecated APIs
Agent-Logs-Url: https://github.com/sonofab1rd/univocity-parsers/sessions/3a2fe5b1-9c3a-4764-8971-dd68d5f87124

Co-authored-by: sonofab1rd <10524434+sonofab1rd@users.noreply.github.com>